[package]
name = "ensync"
version = "0.1.0"
authors = ["Jason Lingle"]
license = "GPL-3.0"
repository = "https://github.com/altsysrq/ensync"
keywords = ["file", "synchronization", "synchronize", "encryption"]

description = """
A flexible ENcrypted file SYNChroniser suitable for uses where the central
location is not fully trusted.
"""

[dependencies]
# Can't upgrade to 0.3 because of rust-crypto dependency
chrono = { version = "0.2" }
flate2 = "0.2.17"
fourleaf = "0.1.0"
error-chain = "0.9.0"
lazy_static = "0.2.2"
libc = "0.2.20"
num_cpus = "1.2.1"
quick-error = "1.1.0"
rand = "0.3.15"
regex = "0.2.1"
rpassword = { version = "0.3.1", optional = true }
# Non-1.0 status shouldn't be much of an issue since we're just using AES and
# Scrypt.
rust-crypto = "0.2.36"
sqlite = "0.23.3"
tempfile = "2.1.5"
tiny-keccak = "1.1.1"
toml = { version = "0.2.1", default-features = false }

[dependencies.clap]
version = "2.20"
default-features = false
features = []

[dev-dependencies]
quickcheck = "0.4.1"
tempdir = "0.3.5"
os_pipe = "0.4.1"

[features]

default = [ "passphrase-prompt", "nicities" ]

# Enable to support prompting for a passphrase interactively.
#
# This depends on `rpassword`, which is not available on all platforms (e.g.,
# it does not currently support DragonFly BSD).
passphrase-prompt = [ "rpassword" ]

# Enable some nicities for interactive use that may not be available on all
# platforms.
nicities = [ "clap/suggestions", "clap/wrap_help" ]
