[package]
name = "ensync"
version = "0.2.5"
authors = ["Jason Lingle"]
license = "GPL-3.0"
repository = "https://github.com/altsysrq/ensync"
documentation = "https://github.com/AltSysrq/ensync/blob/master/README.md#ensync"
keywords = ["file", "synchronization", "synchronize", "encryption"]
categories = ["cryptography", "command-line-utilities"]

description = """
A flexible ENcrypted file SYNChroniser suitable for uses where the central
location is not fully trusted.
"""

[badges]
travis-ci = { repository = "AltSysrq/ensync" }

[dependencies]
# Can't upgrade to 0.3 because of rust-crypto dependency
chrono = { version = "0.2" }
flate2 = "1.0.1"
fourleaf = "0.1.1"
error-chain = "0.11.0"
lazy_static = "1.0.0"
libc = "0.2.35"
notify = "4.0.3"
num_cpus = "1.8.0"
quick-error = "1.2.1"
rand = "0.3.20"
regex = "0.2.5"
rpassword = { version = "2.0.0", optional = true }
# Non-1.0 status shouldn't be much of an issue since we're just using AES and
# Scrypt.
rust-crypto = "0.2.36"
sqlite = "0.23.9"
tempfile = "2.2.0"
tiny-keccak = "1.4.0"
toml = { version = "0.4.5", default-features = false }

[dependencies.clap]
version = "2.29.1"
default-features = false
features = []

[dev-dependencies]
tempdir = "0.3.5"
os_pipe = "0.6.0"
proptest = "0.3.4"

[features]

default = [ "passphrase-prompt", "nicities" ]

# Enable to support prompting for a passphrase interactively.
#
# This depends on `rpassword`, which is not available on all platforms (e.g.,
# it does not currently support DragonFly BSD).
passphrase-prompt = [ "rpassword" ]

# Enable some nicities for interactive use that may not be available on all
# platforms.
nicities = [ "clap/suggestions", "clap/wrap_help" ]
